favorite button no longer cut off on left side

--- a/app/assets/stylesheets/song_list.css.scss
+++ b/app/assets/stylesheets/song_list.css.scss
@@ -55,7 +55,7 @@
 
 .favorite {
   background: transparent;
-  padding: 0px;
+  padding-left: 1px;
   color: gray;
   border-radius: 5px;
   font-size: 32px;
